--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -93,5 +93,12 @@
       "service": "S3",
       "providerPlugin": "awscloudformation"
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2021-09-26T05:01:57.407Z"
+    }
   }
 }
